# internal/posts/api/openapi/swagger.yaml
@@ -112,6 +112,29 @@ paths:
       summary: List
       tags:
       - posts
+  /api/up/{post_id}:
+    put:
+      description: Upwotes Post and increments its score.
+      parameters:
+      - description: account id
+        in: path
+        name: post_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/httperr.ErrorResponse'
+      security:
+      - JWT: []
+      summary: Upwote Post
+      tags:
+      - posts
 securityDefinitions:
   JWT:
     in: header
